Bugfixes, centralize cache injection, modify rate limits

--- a/WebApp/Views/Job/Index.cshtml
+++ b/WebApp/Views/Job/Index.cshtml
@@ -89,7 +89,7 @@ else
                                 <input type="hidden" name="sortBy" value="@sortBy" />
                             </form>
 
-                            @if (User.IsInRole("NLO"))
+                            @if (User.IsInRole("Recruiter"))
                             {
                                 <div class="ml-3">
                                     <button type="button"
