--- a/WebApp/Views/Job/IndexApplicant.cshtml
+++ b/WebApp/Views/Job/IndexApplicant.cshtml
@@ -75,7 +75,7 @@
                 <form asp-action="GetAllJobsApplicant" method="get" class="flex items-center space-x-2">
                     <label for="sortBy" class="pt-2 text-sm font-medium text-gray-700">Sort By:</label>                   
                         <select id="sortBy" name="sortBy" onchange="this.form.submit()" class="rounded-md border border-gray-300 p-2">
-                        <option value="match" selected=@(sortBy == "match" || string.IsNullOrEmpty(sortBy))>Match Percent (Default)</option>
+                        <option value="match" selected=@(sortBy == "match" || string.IsNullOrEmpty(sortBy))>Match Percent</option>
                         <option value="salary_asc" selected=@(sortBy == "salary_asc")>Salary (Lowest First)</option>
                         <option value="salary_desc" selected=@(sortBy == "salary_desc")>Salary (Highest First)</option>
                         <option value="created_asc" selected=@(sortBy == "created_asc")>Posted Date (Oldest First)</option>
@@ -105,7 +105,7 @@
                     @foreach (var job in Model)
                     {
                         <div onclick="location.href='@Url.Action("GetJob", "Job", new { id = job.JobId })'"
-                             class="py-2 cursor-pointer">
+                             class="cursor-pointer py-2">
                             <div class="rounded-xl bg-gray-100 p-1 shadow-md transition-shadow duration-300 hover:shadow-lg">
                                 <div class="rounded-xl bg-white px-3 py-2">
                                     <!-- Company and Date Created -->
@@ -151,7 +151,7 @@
                                         {
                                             foreach(var skill in job.Skills)
                                             {
-                                               <span class="rounded-full border px-2 py-1 text-gray500 text-xs">@skill.Name.ToUpper()</span> 
+                                               <span class="rounded-full border px-2 py-1 text-xs text-gray-500">@skill.Name.ToUpper()</span> 
                                             }
                                         }
                                         else
