--- a/WebApp/Views/User/Index.cshtml
+++ b/WebApp/Views/User/Index.cshtml
@@ -14,8 +14,8 @@
     bool? verified = ViewData["Verified"] as bool?;
     int pageIndex = Model.PageIndex;
 
-    string sortByName = string.IsNullOrEmpty(sortBy) ? "name_desc" : null;
-    string sortByEmail = sortBy == "email" ? "email_desc" : "email";
+    string sortByName = sortBy == "name_asc" ? "name_desc" : "name_asc";
+    string sortByEmail = sortBy == "email_asc" ? "email_desc" : "email_asc";
 }
 
 
@@ -59,8 +59,8 @@
                                        asp-route-verified="@verified"
                                        class="cursor-pointer text-black hover:text-[#A53D3D]">
                                         Name
-                                        @(string.IsNullOrEmpty(sortBy) ? Html.Raw("<i class='fas fa-sort'></i>") :
-                                            (sortBy == "name_desc" ? Html.Raw("<i class='fas fa-sort-down'></i>") : Html.Raw("<i class='fas fa-sort-up'></i>")))
+                                        @(sortBy == "name_asc" ? Html.Raw("<i class='fa-solid fa-sort-up'></i>") : 
+                                            (sortBy == "name_desc" ? Html.Raw("<i class='fa-solid fa-sort-down'></i>") : Html.Raw("<i class='fa-solid fa-sort'></i>")))
                                     </a>
                                 </th>
 
@@ -73,7 +73,7 @@
                                        asp-route-verified="@verified"
                                        class="cursor-pointer text-black hover:text-[#A53D3D">
                                         Email
-                                        @(sortBy == "email" ? Html.Raw("<i class='fas fa-sort-up'></i>") :
+                                        @(sortBy == "email_asc" ? Html.Raw("<i class='fas fa-sort-up'></i>") :
                                             (sortBy == "email_desc" ? Html.Raw("<i class='fas fa-sort-down'></i>") : Html.Raw("<i class='fas fa-sort'></i>")))
                                     </a>
                                 </th>
